Testing multiple LSTM

--- a/Build Iteratively.ipynb
+++ b/Build Iteratively.ipynb
@@ -13,7 +13,7 @@
     "import tensorflow.keras as keras\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras import regularizers\n",
-    "from tensorflow.keras.layers import LSTM, Dense, LSTM, Flatten, BatchNormalization, Dropout\n",
+    "from tensorflow.keras.layers import LSTM, Dense, LSTM, Flatten, BatchNormalization, Dropout, GRU\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "import tensorflow as tf\n",
     "import module\n",
@@ -79,15 +79,23 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm (LSTM)                  (None, 1000, 2)           224       \n",
+      "lstm (LSTM)                  (None, 1000, 32)          7424      \n",
       "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 1000, 2)           8         \n",
+      "batch_normalization (BatchNo (None, 1000, 32)          128       \n",
       "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 12)                720       \n",
+      "lstm_1 (LSTM)                (None, 32)                8320      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 32)                128       \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 16)                528       \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 16)                64        \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 12)                204       \n",
       "=================================================================\n",
-      "Total params: 952\n",
-      "Trainable params: 948\n",
-      "Non-trainable params: 4\n",
+      "Total params: 16,796\n",
+      "Trainable params: 16,636\n",
+      "Non-trainable params: 160\n",
       "_________________________________________________________________\n",
       "None\n"
      ]
@@ -95,20 +103,26 @@
    ],
    "source": [
     "model = keras.Sequential()\n",
-    "model.add(LSTM(2, \n",
+    "model.add(LSTM(32, \n",
     "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
     "               return_sequences = True,\n",
-    "               recurrent_dropout = .5,\n",
-    "              # kernel_regularizer=regularizers.l2(0.01),\n",
+    "#               recurrent_dropout = .5,\n",
+    "          #     kernel_regularizer=regularizers.l2(0.01),\n",
     "              ))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(LSTM(len(enc.categories_[0]), \n",
-    "               activation= \"softmax\",\n",
-    "               #input_shape=(train_x.shape[1], train_x.shape[2]), \n",
+    "model.add(LSTM(32, \n",
+    "             #  input_shape=(train_x.shape[1], train_x.shape[2]), \n",
     "               return_sequences = False,\n",
-    "               recurrent_dropout = .5,\n",
-    "              # kernel_regularizer=regularizers.l2(0.01),\n",
+    "#               recurrent_dropout = .5,\n",
+    "               go_backwards = True\n",
+    "          #     kernel_regularizer=regularizers.l2(0.01),\n",
     "              ))\n",
+    "model.add(BatchNormalization())\n",
+    "#model.add(Dropout(.5))\n",
+    "model.add(Dense(16, activation= \"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "#model.add(Dropout(.5))\n",
+    "model.add(Dense(len(enc.categories_[0]), activation= \"softmax\"))\n",
     "adam = keras.optimizers.Adam(lr=0.001)\n",
     "model.compile(loss = \"categorical_crossentropy\", optimizer= adam, metrics=[\"acc\"])\n",
     "print(model.summary())"
@@ -123,16 +137,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4644. 5093. 4208. 5442. 3931. 4528. 4323. 5677. 4847. 4649. 3791. 5372.]\n",
-      "Train on 56505 samples, validate on 6373 samples\n",
-      "Epoch 1/3\n",
-      "10240/56505 [====>.........................] - ETA: 1:50 - loss: 2.4876 - acc: 0.0830"
+      "[4943. 4847. 4204. 5771. 3821. 4422. 4259. 4923. 4450. 5737. 4721. 6117.]\n",
+      "Train on 58215 samples, validate on 14753 samples\n",
+      "Epoch 1/2\n",
+      " 6144/58215 [==>...........................] - ETA: 19:15 - loss: 2.7289 - acc: 0.0877"
      ]
     }
    ],
    "source": [
     "#add recurrent dropout to add noise to duration\n",
-    "desc = \"2LSTM_2_Output_NoReg_3Step_50train_01LR_ChangeStack\"\n",
+    "desc = \"LSTM32_32_Dense16_Output_NoReg_NoDropout_2Step_100train_01LR_NH\"\n",
     "log_dir = os.path.join(\n",
     "    \"logs\",\n",
     "    \"betterSampling\",\n",
@@ -144,9 +158,9 @@
     ")\n",
     "\n",
     "train_n = 100\n",
-    "val_n  = int(train_n/5)\n",
+    "val_n  = int(2*train_n/5)\n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
-    "epochs = 3\n",
+    "epochs = 2\n",
     "iterations = 10\n",
     "learn_rate = 0.01\n",
     "module.train(iterations, learn_rate, train_n, val_n, seconds, samplerate,\n",
