added sampling loop

--- a/Sampling length and frequency.ipynb
+++ b/Sampling length and frequency.ipynb
@@ -45,56 +45,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seconds = 10\n",
-    "samplerate = 10000\n",
-    "train_n = 100\n",
-    "sample_n = train_n * 20\n",
-    "val_n  = int(2*train_n/5)\n",
-    "valsample_n = val_n * 20\n",
-    "val_n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seconds = 10\n",
-    "samplerate = 10000\n",
-    "train_n = 100\n",
-    "sample_n = train_n * 20\n",
-    "val_n  = int(train_n/5)\n",
-    "valsample_n = val_n * 20\n",
-    "train_x, train_labels, val_x, val_labels, class_weights = module.getSamples(train_n, \n",
-    "                                                                            train_n * 20, \n",
-    "                                                                            val_n, \n",
-    "                                                                            valsample_n,\n",
-    "                                                                            seconds,\n",
-    "                                                                            samplerate, \n",
-    "                                                                            countriesOfInterest,\n",
-    "                                                                            enc, \n",
-    "                                                                            verbose = 1)\n",
-    "print(\"train\", np.sum(train_labels, axis = 0))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fit model"
+    "### Test Sampling"
    ]
   },
   {
@@ -109,6 +63,12 @@
     "valsample_n = val_n * 20\n",
     "for seconds in [1, 3, 5, 10]:\n",
     "    for samplerate in [10, 100, 1000, 10000]:\n",
+    "        train_x, train_labels, val_x, val_labels, class_weights = module.getSamples(1, 1, 1, 1, \n",
+    "                                                                                    seconds, \n",
+    "                                                                                    samplerate, \n",
+    "                                                                                    countriesOfInterest, \n",
+    "                                                                                    enc, \n",
+    "                                                                                    verbose = 0)\n",
     "        model = keras.Sequential()\n",
     "        model.add(BatchNormalization(input_shape=(train_x.shape[1], train_x.shape[2])))\n",
     "\n",
@@ -149,37 +109,9 @@
     "        batch_size = 4096\n",
     "        model = module.train(iterations, learn_rate, train_n, sample_n, val_n, valsample_n, seconds, samplerate,\n",
     "                        countriesOfInterest, enc, epochs, tensorboard_callback, model_dir,\n",
-    "                        model, batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "desc = str(seconds) + \"_seconds_\" + str(samplerate) + \"_samples\"\n",
-    "log_dir = os.path.join(\n",
-    "    \"logs\",\n",
-    "    \"Quality\",\n",
-    "    desc\n",
-    ")\n",
-    "model_dir = os.path.join(\n",
-    "    \"pickle\",\n",
-    "    desc\n",
-    ")\n",
-    "\n",
-    "\n",
-    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
-    "epochs = 1\n",
-    "iterations = 20\n",
-    "learn_rate = 0.001\n",
-    "batch_size = 4096\n",
-    "model = module.train(iterations, learn_rate, train_n, sample_n, val_n, valsample_n, seconds, samplerate,\n",
-    "                countriesOfInterest, enc, epochs, tensorboard_callback, model_dir,\n",
-    "                model, batch_size)"
+    "                        model, batch_size)\n",
+    "        del model model_dir log_dir desc adam train_x train_labels val_x val_labels class_weights\n",
+    "        gc.collect()"
    ]
   },
   {
