ran durating and sampling tests

--- a/Build Iteratively.ipynb
+++ b/Build Iteratively.ipynb
@@ -82,8 +82,8 @@
     }
    ],
    "source": [
-    "seconds = 5\n",
-    "samplerate = 100\n",
+    "seconds = 10\n",
+    "samplerate = 10\n",
     "train_x, train_labels, val_x, val_labels, class_weights = module.getSamples(1, 1, 1, 1, seconds, samplerate, countriesOfInterest,\n",
     "               enc, verbose = 0)\n",
     "print(\"train\", np.sum(train_labels, axis = 0))"
@@ -170,8 +170,8 @@
     "              ))\n",
     "model.add(BatchNormalization())\n",
     "#model.add(Dropout(.5))\n",
-    "#model.add(Dense(64, activation= \"relu\"))\n",
-    "#model.add(BatchNormalization())\n",
+    "model.add(Dense(16, activation= \"relu\"))\n",
+    "model.add(BatchNormalization())\n",
     "#model.add(Dropout(.5))\n",
     "model.add(Dense(len(enc.categories_[0]), activation= \"softmax\"))\n",
     "adam = keras.optimizers.Adam(lr=0.001, amsgrad = True)\n",
@@ -1783,8 +1783,8 @@
     "    \"save\"\n",
     ")\n",
     "\n",
-    "train_n = 100\n",
-    "sample_n = 8000\n",
+    "train_n = 150\n",
+    "sample_n = None\n",
     "val_n  = int(2*train_n/5)\n",
     "valsample_n = 1000\n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
