created the confusion matrix

--- a/Build Iteratively Loop.ipynb
+++ b/Build Iteratively Loop.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "7"
       ]
      },
      "execution_count": 2,
@@ -120,7 +120,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -15312,24 +15317,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "batch_normalization (BatchNo (None, 100, 25)           100       \n",
+      "_________________________________________________________________\n",
+      "lstm (LSTM)                  (None, 100, 64)           23040     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 100, 64)           256       \n",
+      "_________________________________________________________________\n",
+      "lstm_1 (LSTM)                (None, 64)                33024     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 64)                256       \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 16)                1040      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 16)                64        \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 12)                204       \n",
+      "=================================================================\n",
+      "Total params: 57,984\n",
+      "Trainable params: 57,646\n",
+      "Non-trainable params: 338\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_n = 100\n",
+    "sample_n = train_n * 20\n",
+    "val_n  = int(train_n/5)\n",
+    "valsample_n = val_n * 20\n",
+    "iterations = 50\n",
+    "epochs = 2\n",
+    "learn_rate = 0.001\n",
+    "batch_size = 4096\n",
+    "for D in [16]:\n",
+    "    for LSTM2 in [64]:\n",
+    "        for LSTM1 in [64]:\n",
+    "            model = keras.Sequential()\n",
+    "            model.add(BatchNormalization(input_shape=input_shape))\n",
+    "\n",
+    "            model.add(LSTM(LSTM1, \n",
+    "                           input_shape=input_shape, \n",
+    "                           return_sequences = True\n",
+    "                          ))\n",
+    "            model.add(BatchNormalization())\n",
+    "            model.add(LSTM(LSTM2, \n",
+    "                           return_sequences = False,\n",
+    "                           go_backwards = True\n",
+    "                          ))\n",
+    "            model.add(BatchNormalization())\n",
+    "            model.add(Dense(D, activation= \"relu\"))\n",
+    "            model.add(BatchNormalization())\n",
+    "            model.add(Dense(len(enc.categories_[0]), activation= \"softmax\"))\n",
+    "            adam = keras.optimizers.Adam(lr=0.001, amsgrad = True)\n",
+    "            model.compile(loss = \"categorical_crossentropy\", optimizer= adam, metrics=[\"acc\"])\n",
+    "            gc.collect()\n",
+    "            print(model.summary())\n",
+    "            desc = str(LSTM1) + \"_\" + str(LSTM2) + \"_\" + str(D)\n",
+    "            log_dir = os.path.join(\n",
+    "                \"logs\",\n",
+    "                \"10sec_10sample\",\n",
+    "                desc\n",
+    "            )\n",
+    "            model_dir = os.path.join(\n",
+    "                \"pickle\",\n",
+    "                desc\n",
+    "            )\n",
+    "            model.load_weights(model_dir, by_name=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_x, train_labels, val_x, val_labels, class_weights = module.getSamples(train_n, sample_n, val_n, valsample_n, seconds, samplerate, countriesOfInterest, enc)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4800/4800 [==============================] - 1s 235us/sample\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = model.predict(val_x, batch_size = batch_size, verbose = 1)\n",
+    "conf_mat = confusion_matrix(\n",
+    "    enc.inverse_transform(val_labels),\n",
+    "    enc.inverse_transform(preds),\n",
+    "    labels = countriesOfInterest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[400 400 400 400 400 400 400 400 400 400 400 400]\n",
+      "[400. 400. 400. 400. 400. 400. 400. 400. 400. 400. 400. 400.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(conf_mat.sum(axis = 1))\n",
+    "print(val_labels.sum(axis = 0))\n",
+    "# rows are true labels, columns are predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "conf_mat = pd.DataFrame(conf_mat, index = countriesOfInterest, columns = countriesOfInterest)\n",
+    "conf_mat.to_csv(\"64_64_16_conf_mat.csv\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -15481,7 +15607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
